--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-THEME=https://raw.githubusercontent.com/SMUsamaShah/Obsidian-Win98-Edition/master/obsidian.css
-BASE_THEME=dark
+THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/master/obsidian.css
+BASE_THEME=light
