--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-THEME=https://raw.githubusercontent.com/whyt-byte/Blue-Topaz_Obsidian-css/master/obsidian.css
-BASE_THEME=light
+THEME=https://raw.githubusercontent.com/bencodezen/obsidian-night-owl-theme/master/obsidian.css
+BASE_THEME=dark
+SITE_NAME_HEADER=Digital Garden
+dgHomeLink=true
+dgPassFrontmatter=false
