--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ THEME=https://raw.githubusercontent.com/nickmilo/LYT-Mode/master/obsidian.css
 BASE_THEME=dark
 SITE_NAME_HEADER=Digital Garden
 dgHomeLink=true
-dgPassFrontmatter=false
+dgPassFrontmatter=true
 dgShowBacklinks=true
 dgShowFileTree=true
 dgEnableSearch=true
